# comfy-agent-view

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.learnings/: LEARNINGS.md
docs/decisions/: 0001-agent-readable-workflow-view.md  0002-mcp-stdio-core-cli-architecture.md  0003-profile-redaction-policy.md  0004-workflow-normalization-and-link-repair.md  0005-path-security-and-runtime-boundaries.md  0006-runtime-load-error-diagnostics.md  README.md
src/comfy_agent_view/: __init__.py  cli.py  config.py  core.py  mcp_server.py  models.py
tests/: test_core.py
