[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "comfy-agent-view"
version = "0.1.0"
description = "Agent-readable summaries and normalized views for ComfyUI workflow JSON."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
comfy-agent-view = "comfy_agent_view.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
